--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,14 +2,16 @@
 <html>
 <head>
   <title>Aplikacja</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    'applikation', media: 'all', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'applikation', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
 <%=render 'home/header'%>
-<%= yield %>
 
+<div class="container">
+<%= yield %>
+</div>
 </body>
 </html>
